# spline

./: .clang-format  .gitignore  README.md
.github/workflows/: docker-image.yml
building/: Dockerfile
building/install_scripts/: install_april_tags.sh  install_build_dependencies.sh  install_code_check_dependencies.sh  install_library_dependencies.sh
building/local/: build_image.sh  run_code_coverage_report.sh  run_container.sh  run_webcam_demo.sh
building/scripts/: build_library.sh  code_checks.sh  code_coverage.sh  code_coverage_assertion.sh  code_coverage_github_action.sh
code/: CMakeLists.txt
code/examples/: target_config.yaml  webcam_demo.cpp
code/include/feature_extraction/: target_extraction.hpp
code/src/: april_tag_cpp_wrapper.cpp  april_tag_cpp_wrapper.hpp  april_tag_cpp_wrapper.test.cpp  constants.hpp  lie.cpp  lie.hpp  lie.test.cpp  r3_spline.cpp  r3_spline.hpp  r3_spline.test.cpp  se3_spline.cpp  se3_spline.hpp  se3_spline.test.cpp  so3_spline.cpp  so3_spline.hpp  so3_spline.test.cpp  target_extraction.cpp  target_extractors.cpp  target_extractors.hpp  target_extractors.test.cpp  target_generators.cpp  target_generators.hpp  target_generators.test.cpp  test_fixture_april_tag.hpp  test_fixture_yaml_config.hpp  types.hpp  types_and_constants.hpp  utilities.cpp  utilities.hpp  utilities.test.cpp  utilities_testing.hpp
code/src/generated_apriltag_code/: README.md  TagCustom36h11.java  april_gen.py  tagCustom36h11.c  tagCustom36h11.h
code/test/: target_extraction.test.cpp
